--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "erlasty",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "react server render by puppeteer for search bots",
   "main": "index.js",
   "directories": {
@@ -24,5 +24,9 @@
   "bugs": {
     "url": "https://github.com/prohetamine/erlasty/issues"
   },
-  "homepage": "https://github.com/prohetamine/erlasty#readme"
+  "homepage": "https://github.com/prohetamine/erlasty#readme",
+  "dependencies": {
+    "express": "^4.17.1",
+    "puppeteer": "^10.2.0"
+  }
 }
